rregullimi i nje errori

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="header-punimi.css">
+    <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="footer.css">
     <title>HOME</title>
@@ -19,7 +19,6 @@
         <div class="links">
             <a href="login-form.html" >LOG IN</a>
             <a href="home.html" id="active">HOME</a>
-            <a href="kompanite.html">KOMPANITE</a>
             <a href="order.html">ORDER</a>
             <a href="contact.html">CONTACT</a>
         </div>
